--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="Voici le profil d'Ines">
 		<meta charset="UTF-8">
 		<script src="https://kit.fontawesome.com/e373ba5edd.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="CV.css">
+		<link rel="stylesheet" href="https://github.com/ines-manseurr/my-profile/edit/main/cv.css">
 
 	</head>
 
@@ -18,7 +18,7 @@
 
 		<section>
 			<div class="photo">
-				<img src="images/PDP.jpeg" alt="Ma photo de profil">
+				<img src="https://github.com/ines-manseurr/my-profile/blob/main/images/PDP.jpeg?raw=true" alt="Ma photo de profil">
 			</div>
 			<div class="prez">
 				<h2>Qui suis-je ?</h2>
@@ -44,10 +44,10 @@
 					<p><a href="mailto:inesmanseur78@gmail.com">inesmanseur78@gmail.com</a></p>
 				</div>
 				<div class="social">
-                <a href="https://www.facebook.com/ines.manseur.5/"target="_blank"><img src="images/LOGO FB.png" alt="Logo Fb"></a>
-                <a href="https://www.linkedin.com/in/in%C3%A8s-manseur-aa4191172/"target="_blank"><img src="images/LOGO LK.png" alt="Logo Lk"></a>
-                <a href="https://www.instagram.com/ines.manseur/?hl=fr"target="_blank"><img src="images/LOGO INSTA.png" alt="Logo Insta"></a>
-                <a href="https://www.youtube.com/watch?v=gkTb9GP9lVI"target="_blank"><img src="images/LOGO YT.png" alt="Logo Yt"></a>
+                <a href="https://www.facebook.com/ines.manseur.5/"target="_blank"><img src="https://github.com/ines-manseurr/my-profile/blob/main/images/LOGO%20FB.png?raw=true" alt="Logo Fb"></a>
+                <a href="https://www.linkedin.com/in/in%C3%A8s-manseur-aa4191172/"target="_blank"><img src="https://github.com/ines-manseurr/my-profile/blob/main/images/LOGO%20LK.png?raw=true" alt="Logo Lk"></a>
+                <a href="https://www.instagram.com/ines.manseur/?hl=fr"target="_blank"><img src="https://github.com/ines-manseurr/my-profile/blob/main/images/LOGO%20INSTA.png?raw=true" alt="Logo Insta"></a>
+                <a href="https://www.youtube.com/watch?v=gkTb9GP9lVI"target="_blank"><img src="https://github.com/ines-manseurr/my-profile/blob/main/images/LOGO%20YT.png?raw=true" alt="Logo Yt"></a>
            		</div>
             </div>
 		</section>
@@ -56,7 +56,7 @@
 			<h2>Expériences professionnelles</h2>
 			<div class="exp">
             <div class="exp-logo">
-                <a href="https://www.startthefup.com" target="_blank"><img src="images/Logo STFU.png" alt="Logo Start The F*** Up"></a>
+                <a href="https://www.startthefup.com" target="_blank"><img src="https://github.com/ines-manseurr/my-profile/blob/main/images/LOGO%20STFU.png?raw=true" alt="Logo Start The F*** Up"></a>
             </div>
             <div class="exp-info">
                 <h3>Bras Droit Head of Sales</h3>
@@ -69,7 +69,7 @@
         </div>
         <div class="exp">
             <div class="exp-logo">
-                <a href="http://feelfrancais.com/"target="_blank"><img src="images/LOGO FF.png" alt="Logo Feel Français"></a>
+                <a href="http://feelfrancais.com/"target="_blank"><img src="https://github.com/ines-manseurr/my-profile/blob/main/images/LOGO%20FF.png?raw=true" alt="Logo Feel Français"></a>
             </div>
             <div class="exp-info">
                 <h3>Business Developer</h3>
@@ -82,7 +82,7 @@
         </div>
         <div class="exp">
             <div class="exp-logo">
-                <a href="https://www.escapadefrancaise.com/"target="_blank"><img src="images/Escapade Française.png" alt="Logo Escapade Française"></a>
+                <a href="https://www.escapadefrancaise.com/"target="_blank"><img src="https://github.com/ines-manseurr/my-profile/blob/main/images/Escapade%20Franc%CC%A7aise.png?raw=true" alt="Logo Escapade Française"></a>
             </div>
             <div class="exp-info">
                 <h3>Stage Community Manager</h3>
@@ -99,7 +99,7 @@
         <h2>Formation</h2>
         <div class="exp">
             <div class="exp-logo">
-                <a href="#"><img src="images/Logo IESEG.jpeg" alt="Logo IESEG"></a>
+                <a href="#"><img src="https://github.com/ines-manseurr/my-profile/blob/main/images/Logo%20IESEG.jpeg?raw=true" alt="Logo IESEG"></a>
             </div>
             <div class="exp-info">
                 <h3>IÉSEG - Master Digital Marketing et Innovation</h3>
@@ -111,7 +111,7 @@
         </div>
         <div class="exp">
             <div class="exp-logo">
-                <a href="#"><img src="images/Logo ESGCI.png" alt="Logo ESGCI"></a>
+                <a href="#"><img src="https://github.com/ines-manseurr/my-profile/blob/main/images/Logo%20ESGCI.png?raw=true" alt="Logo ESGCI"></a>
             </div>
             <div class="exp-info">
                 <h3>ESCGI - Bachelor Marketing et Commerce</h3>
@@ -123,7 +123,7 @@
         </div>
         <div class="exp">
             <div class="exp-logo">
-                <a href=""><img src="images/Logo IUT de Paris.png" alt="Logo IUT Paris"></a>
+                <a href=""><img src="https://github.com/ines-manseurr/my-profile/blob/main/images/Logo%20IUT%20de%20Paris.png?raw=true" alt="Logo IUT Paris"></a>
             </div>
             <div class="exp-info">
                 <h3>IUT de Paris - DUT Techniques de Commercialisation</h3>
@@ -138,19 +138,19 @@
     <section>
         <h2>Centres d'intérêt</h2>
         <figure class="interet">
-            <img src="images/Echecs.jpeg" alt="Échecs">
+            <img src="https://github.com/ines-manseurr/my-profile/blob/main/images/Echecs.jpeg?raw=true" alt="Échecs">
             <figcaption>Échecs</figcaption>
         </figure>
         <figure class="interet">
-            <img src="images/Cuisine.jpeg" alt="Cuisine">
+            <img src="https://github.com/ines-manseurr/my-profile/blob/main/images/Cuisine.jpeg?raw=true" alt="Cuisine">
             <figcaption>Cuisine</figcaption>
         </figure>
         <figure class="interet">
-            <img src="images/Netflix.webp" alt="Netflix">
+            <img src="https://raw.githubusercontent.com/ines-manseurr/my-profile/main/images/Netflix.webp" alt="Netflix">
             <figcaption>Netflix and chill</figcaption>
         </figure>
         <figure class="interet">
-            <img src="images/Lecture.jpeg" alt="Lecture">
+            <img src="https://github.com/ines-manseurr/my-profile/blob/main/images/Lecture.jpeg?raw=true" alt="Lecture">
             <figcaption>Lecture</figcaption>
         </figure>
     </section>
