--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="Voici le profil d'Ines">
 		<meta charset="UTF-8">
 		<script src="https://kit.fontawesome.com/e373ba5edd.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="https://github.com/ines-manseurr/my-profile/edit/main/cv.css">
+		<link rel="stylesheet" href="https://ines-manseurr.github.io/my-profile/cv.css">
 
 	</head>
 
